--- a/style.css
+++ b/style.css
@@ -2,16 +2,23 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     
 }
 
+h1{
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
 .grid-container{
-    height: 41rem;
+    border: 0.75rem solid black;
+    height: 40.35rem;
     width: 42rem;
     background-color: black;
     display: grid;
     grid-template-columns: 7rem 29rem 4rem;
-    grid-template-rows: 12rem 2rem 15rem 3.25rem 0.10rem 3rem;
+    grid-template-rows: 12rem 1.5rem 15rem 3.25rem 0.10rem 3rem;
     gap: 1rem;
     
 }
@@ -54,4 +61,22 @@ body{
     background-color:#F9D01E ;
     grid-area: 6/3/7/4;
 
+}
+
+@media(max-width:1250px){
+    body{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        overflow: hidden;    
+        }
+
+        h1{
+            font-size: 2rem;
+        }
+    .grid-container{
+        transform: scale(0.4);
+        transform-origin: top center;
+    }
 }
